--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Test</title>
+		<link rel="stylesheet" type="text/css" href="main.css">
+	</head>
+	<body align="center">
+		<h1><u>Ini Cuma Ngetes</u></h1>
+		<img src="screenshot.png" width="100px" height="100px">
+		<p>Nama saya Agung Laksono dari Ti-2019-p1 sebelumnya sekolah di SMAN 1 PLUMBON jurusan IPS, Pengalaman Ngoding cuma Sebatas oprek hp android aja, Alasan Ikut Komunitas Android karna Ingin Memperdalam lebih jauh android
+		</p>
+	</body>
+</html>
